[SYNCOPE-1614] Spring Boot HealthIndicator and InfoContributor for al… (#277)